fix: enable previously disabled tests and add @EntityAttribute support
- Add @EntityAttribute annotation to EmployeeWithDept DTO for proper field mapping
- Enable countDistinct test (framework bug fixed)
- Enable EmployeeWithDept projection test (annotation support added)
- Improve code style: use Comparator.comparing, method references, and getFirst()